[package]
description = "ROS build backend for Pixi"
edition.workspace = true
license.workspace = true
name = "pixi-build-ros"
repository.workspace = true
version = "0.4.0"

[package.metadata.dist]
dist = false

# GR fork: emit the binary as `pixi-build-ros-gr` so it matches the conda
# package name shipped from ros-recipes/vendor_recipes/pixi-build-ros-gr/.
# Pixi resolves a backend by package name then exec's $PREFIX/bin/<name>;
# without this override the binary defaults to `pixi-build-ros` (the cargo
# package name) and pixi can't find it. Drop this stanza if the upstream
# rename of the conda package is dropped.
[[bin]]
name = "pixi-build-ros-gr"
path = "src/main.rs"

[features]
default = ["rustls-tls"]
native-tls = ["pixi_build_backend/native-tls"]
rustls-tls = ["pixi_build_backend/rustls-tls"]
slow_integration_tests = []

[dependencies]
async-trait = { workspace = true }
fs-err = { workspace = true }
indexmap = { workspace = true }
miette = { workspace = true }
pixi_build_backend = { workspace = true }
pixi_build_types = { workspace = true }
rattler_build_jinja = { workspace = true }
rattler_build_recipe = { workspace = true }
rattler_build_types = { workspace = true }
rattler_conda_types = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
roxmltree = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "redactions", "filters"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
