[package]
name = "pixi_build_types"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "The types for communicating between the pixi build frontend and backend"

[dependencies]
ordermap = { workspace = true, features = ["serde"] }
rattler_conda_types = { workspace = true }
rattler_digest = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
url = { workspace = true }
