[package]
authors.workspace = true
description = "The types for communicating between the pixi build frontend and backend"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pixi_build_types"
readme.workspace = true
repository.workspace = true
version = "0.1.0"

[dependencies]
ordermap = { workspace = true, features = ["serde"] }
pixi_stable_hash = { workspace = true, features = [
  "rattler_conda_types",
  "rattler_digest",
  "url",
] }
rattler_conda_types = { workspace = true }
rattler_digest = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
url = { workspace = true }
